c4prj2_input/grade.txt
Grading at Thu Aug  1 13:08:39 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:8:8: error: redefinition of ‘struct future_cards_tag’
 struct future_cards_tag {
        ^
In file included from input.h:5:0,
                 from input.c:4:
future.h:6:8: note: originally defined here
 struct future_cards_tag {
        ^
input.c:12:33: error: conflicting types for ‘future_cards_t’
 typedef struct future_cards_tag future_cards_t;
                                 ^
In file included from input.h:5:0,
                 from input.c:4:
future.h:10:33: note: previous declaration of ‘future_cards_t’ was here
 typedef struct future_cards_tag future_cards_t;
                                 ^
input.c:15:45: error: unknown type name ‘futrue_cards_t’
 deck_t * hand_from_string(const char * str, futrue_cards_t * fc){
                                             ^
input.c:45:11: error: conflicting types for ‘read_input’
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
           ^
In file included from input.c:4:0:
input.h:8:11: note: previous declaration of ‘read_input’ was here
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc);
           ^
input.c: In function ‘read_input’:
input.c:47:3: error: ‘sz’ undeclared (first use in this function)
   sz = 0;
   ^
input.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
input.c:52:39: error: passing argument 2 of ‘hand_from_string’ from incompatible pointer type [-Werror=incompatible-pointer-types]
     deckPtr = hand_from_string(buffer,fc);
                                       ^
In file included from input.c:4:0:
input.h:7:10: note: expected ‘future_cards_t * {aka struct future_cards_tag *}’ but argument is of type ‘future_cards_t * {aka struct future_cards_tag *}’
 deck_t * hand_from_string(const char * str, future_cards_t * fc);
          ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
